# Sorting-Viewer

./: CMakeLists.txt  README.md
include/: Algoritmos.h  View.h
src/: main.cpp  view.cpp
src/Algoritmos/: bubbleSort.cpp  heapSort.cpp  insertionSort.cpp  mergeSort.cpp  quickSort.cpp  seletionSort.cpp
